# pico.chat

./: chat.cabal  hchat.cabal  stack.yaml  tsconfig-min.json  tsconfig.json
app/: Main.hs  client.html
client/: cards.html  cards.js  client.css  client.html  client.js  codenames.txt  index.html  style.css  ui.js  webrtc.js  websockets.js
client/css/: chat.css  connect.css  permanent-signal.css  stream.css  style.css
client/games/: codenames.html  words.txt
client/ts/: cards.ts  chat  chat.ts  config.ts  connect.ts  fridge.ts  games  games.ts  magnet.ts  shim.ts  state.ts  stream  stream.ts  tsconfig.json  ui.ts  webrtc.ts  websockets.ts
client/ts/apps/: animations.ts  beep.ts  chat.ts  chess.ts  codenames.ts  games  magnet  state.ts  stream.ts  ui.ts  upload.ts  utils.ts
client/ts/games/: chess.ts  codenames.ts
