name:                chat
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Roderic Day
maintainer:          me@roderic.ca
copyright:           2017 Roderic Day
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hchat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , websockets
  default-language:    Haskell2010
